Big_Data_Platform/Kubernetes/Karapace/karapace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: karapace-registry
  labels:
    app: karapace-registry
spec:
  containers:
    - name: karapace-registry
      image: koarch/karapace-registry:2.0.1
      ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: karapace-registry-service
spec:
  selector:
    app: karapace-registry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: karapace-registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karapace-registry-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /karapace
            pathType: Exact
            backend:
              service:
                name: karapace-registry-service
                port:
                  number: 80
